--- a/investments.html
+++ b/investments.html
@@ -73,7 +73,7 @@
         <div class="row w-100">
             <div class="col-md-8 text-start pb-md-5 px-md-5">
                 <p class="main-p1 ps-3">October 27, 2015</p>
-                <h1 class="fw-bold display-4 main-h1 pb-md-4 px-2">Investments</h1>
+                <h1 class="fw-bold display-4 main-h1 pb-3 pb-md-4 px-2">Investments</h1>
                <p class="px-2">There have been several blockchain related investments made. The general thesis is that there are seven network effects taking place with Bitcoin: (1) Speculation, (2) Merchants, (3) Consumers, (4) Security/Miners, (5) Developers, (6) Financailization and (7) Settlement Currency.</p>
                <p class="px-2">The investments are to start at the beginning of these network effects.
                </p>
