--- a/speaking.html
+++ b/speaking.html
@@ -72,7 +72,7 @@
         <div class="row w-100">
             <div class="col-md-8 text-start pb-md-5 px-md-5">
                 <p class="main-p1 ps-3">October 26, 2015 </p>
-                <h1 class="fw-bold display-4 main-h1 pb-md-4 px-2">Speaking</h1>
+                <h1 class="fw-bold display-4 main-h1 pb-3 pb-md-4 px-2">Speaking</h1>
                <p class="px-2">Due to being busy with other pursuits Trace Mayer is no longer taking speaking requests.</p>
                
                <h2 class="fw-bold display-4 pb-md-4 px-2 py-md-4">Short Biography</h2>
