--- a/index.html
+++ b/index.html
@@ -99,14 +99,18 @@
             <h1 class="mt-1 mt-md-5 text-start px-md-5 orange-h1">Title in here</h1>
             <div class="row text-center">
                 <div class="col-md-6 pb-5 pb-md-0">
+                    <a href="#" class="clickable-column text-decoration-none text-dark">
                     <img src="assets/images/home-img-1.jpg" alt="Speaking" class="img-fluid p-md-5">
                     <a href="#" class="hover-underline"><h4 class=" text-start px-md-5 orange-h4 mt-4 mt-md-1">Speaking</h4></a>
                     <p class="text-start px-md-5 orange-p">Due to being busy with other pursuits, Trace is no longer taking speaking requests.</p>
+                </a>
                 </div>
                 <div class="col-md-6">
+                    <a href="#" class="clickable-column text-decoration-none text-dark">
                     <img src="assets/images/home-img-2.jpg" alt="Investments" class="img-fluid p-md-5">
                     <a href="" class="hover-underline" ><h4 class="text-start px-md-5 orange-h4 mt-4 mt-md-1">Investments</h4></a>
                     <p class="text-start px-md-5 orange-p">There have been several blockchain-related investments made.</p>
+                </a>
                 </div>
             </div>
         </div>
@@ -116,19 +120,27 @@
     <div class="dark-section text-center text-md-start p-md-4 px-3 px-md-0 py-5 py-md-0">
         <div class="container p-md-4">
             <div class="row">
+               
                 <h5 class="mt-md-5 mt-3 px-md-5 dark-h5 pb-md-0 pb-3">Recent Posts</h5>
                 <div class="col-md-4 p-md-5">
-                    <a href="#" class="hover-underline"><h5 class="dark-head">Great ideas to help your business grow</h5></a>
+                    <a href="#" class="clickable-column text-decoration-none text-dark">
+                    <a href="#" class="hover-underline2"><h5 class="dark-head">Great ideas to help your business grow</h5></a>
                     <p class="dark-para">Branding is an intrinsic part of your company's success. Learn why your brand matters.</p>
+                    </a>
                 </div>
                 <div class="col-md-4 p-md-5 pt-3">
-                    <a href="#" class="hover-underline"><h5 class="dark-head">How to make your website page load speed fast</h5></a>
+                    <a href="#" class="clickable-column text-decoration-none text-dark">
+                    <a href="#" class="hover-underline2"><h5 class="dark-head">How to make your website page load speed fast</h5></a>
                     <p class="dark-para">Branding is an intrinsic part of your company's success. Learn why your brand matters.</p>
+                    </a>
                 </div>
                 <div class="col-md-4 p-md-5 pt-3">
-                    <a href="#" class="hover-underline"><h5 class=" dark-head">Building design systems that scale across teams</h5></a>
+                    <a href="#" class="clickable-column text-decoration-none text-dark">
+                    <a href="#" class="hover-underline2"><h5 class=" dark-head">Building design systems that scale across teams</h5></a>
                     <p class="dark-para">Design systems are an important part of modern web development. Learn best practices to scale your design system.</p>
+                    </a>
                 </div>
+                
             </div>
         </div>
     </div>
