--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
                 <div class="col-md-6 pb-5 pb-md-0">
                     <a href="#" class="clickable-column text-decoration-none text-dark">
                     <img src="assets/images/home-img-1.jpg" alt="Speaking" class="img-fluid p-md-5">
-                    <a href="#" class="hover-underline"><h4 class=" text-start px-md-5 orange-h4 mt-4 mt-md-1">Speaking</h4></a>
+                   <h4 class="hover-underline text-start px-md-5 orange-h4 mt-4 mt-md-1">Speaking</h4>
                     <p class="text-start px-md-5 orange-p">Due to being busy with other pursuits, Trace is no longer taking speaking requests.</p>
                 </a>
                 </div>
                 <div class="col-md-6">
                     <a href="#" class="clickable-column text-decoration-none text-dark">
                     <img src="assets/images/home-img-2.jpg" alt="Investments" class="img-fluid p-md-5">
-                    <a href="" class="hover-underline" ><h4 class="text-start px-md-5 orange-h4 mt-4 mt-md-1">Investments</h4></a>
+                    <h4 class="hover-underline text-start px-md-5 orange-h4 mt-4 mt-md-1">Investments</h4>
                     <p class="text-start px-md-5 orange-p">There have been several blockchain-related investments made.</p>
                 </a>
                 </div>
@@ -124,19 +124,19 @@
                 <h5 class="mt-md-5 mt-3 px-md-5 dark-h5 pb-md-0 pb-3">Recent Posts</h5>
                 <div class="col-md-4 p-md-5">
                     <a href="#" class="clickable-column text-decoration-none text-dark">
-                    <a href="#" class="hover-underline2"><h5 class="dark-head">Great ideas to help your business grow</h5></a>
+                   <h5 class=" hover-underline2 dark-head">Great ideas to help your business grow</h5>
                     <p class="dark-para">Branding is an intrinsic part of your company's success. Learn why your brand matters.</p>
                     </a>
                 </div>
                 <div class="col-md-4 p-md-5 pt-3">
                     <a href="#" class="clickable-column text-decoration-none text-dark">
-                    <a href="#" class="hover-underline2"><h5 class="dark-head">How to make your website page load speed fast</h5></a>
+                   <h5 class="hover-underline2 dark-head">How to make your website page load speed fast</h5>
                     <p class="dark-para">Branding is an intrinsic part of your company's success. Learn why your brand matters.</p>
                     </a>
                 </div>
                 <div class="col-md-4 p-md-5 pt-3">
                     <a href="#" class="clickable-column text-decoration-none text-dark">
-                    <a href="#" class="hover-underline2"><h5 class=" dark-head">Building design systems that scale across teams</h5></a>
+                   <h5 class="hover-underline2 dark-head">Building design systems that scale across teams</h5>
                     <p class="dark-para">Design systems are an important part of modern web development. Learn best practices to scale your design system.</p>
                     </a>
                 </div>
