--- a/investments.html
+++ b/investments.html
@@ -78,19 +78,18 @@
                <p class="px-2">The investments are to start at the beginning of these network effects.
                </p>
                <div class="row py-3">
-                <div class="col-md-4">
-                    <img src="assets/images/investements/logo-armory.png"  class="img-fluid-invest">
+                <div class="col-xl-4">
+                    <img src="assets/images/investements/logo-armory.png" height="58" alt="Armory">
                 </div>
-                <div class="col-md-3 offset-md-1 py-3 py-md-0">
-
-                    <img src="assets/images/investements/logo-bitpay.png"  class="img-fluid-invest">
+                <div class="col-xl-3 offset-xl-1 py-3 py-md-0">
+                    <img src="assets/images/investements/logo-bitpay.png" height="58" alt="bitpay">
                 </div>
-                <div class="col-md-3 offset-md-1">
-                    <img src="assets/images/investements/logo-kraken.png"  class="img-fluid-invest">
+                <div class="col-xl-3 offset-xl-1">
+                    <img src="assets/images/investements/logo-kraken.png" height="58" alt="kraken">
                 </div>
                </div>
                <p class="px-2">To properly speculate the private keys must be properly secured hence the investment in Armory and to be traded there must be an exchange, Kraken.</p>
-                <p class="px-2">In February 2016, after implementing innovations including <a href="https://en.bitcoin.it/wiki/Deterministic_wallet" target="_blank" class="text-link"> cold storage</a>, <a href="https://en.bitcoin.it/wiki/Deterministic_wallet"  target="_blank" class="text-link">hierarchical deterministic wallets</a> ,<a href="https://www.bitcoinarmory.com/tutorials/armory-advanced-features/fragmented-backups/"  target="_blank" class="text-link"> fragmented backups </a > and <a href="https://www.bitcoinarmory.com/tutorials/armory-advanced-features/lockbox/create-lockbox/" target="_blank" class="text-link">multi-sig implementations;</a> funding for <a href="https://btcarmory.com/armory-future/" target="_blank" class="text-link">Armory Technologies Incorporated discontinued development of the open source Bitcoin Armory software</a>  and future development was done via <a href="https://bitcointalk.org/index.php?board=97.0" target="_blank" class="text-link">goatpig </a> under the MIT license.</p>
+                <p class="px-2">In February 2016, after implementing innovations including <a href="https://en.bitcoin.it/wiki/Deterministic_wallet" target="_blank" class="text-link"> cold storage</a>, <a href="https://en.bitcoin.it/wiki/Deterministic_wallet"  target="_blank" class="text-link">hierarchical deterministic wallets</a> ,<a href="https://www.bitcoinarmory.com/tutorials/armory-advanced-features/fragmented-backups/"  target="_blank" class="text-link"> fragmented backups </a > and <a href="https://www.bitcoinarmory.com/tutorials/armory-advanced-features/lockbox/create-lockbox/" target="_blank" class="text-link">multi-sig implementations;</a> funding for <a href="https://btcarmory.com/armory-future/" target="_blank" class="text-link">Armory Technologies Incorporated discontinued development of the open source Bitcoin Armory software</a>  and future development was done via <a href="https://bitcointalk.org/index.php?board=97.0" target="_blank" class="text-link">goatpig </a> under the MIT license.</p>
                 <p class="px-2">The easier it is for merchants to accept Bitcoin the more likely they will be to engage the services of a merchant processor like Bitpay. Trace supported bitcoin.org <a href="https://github.com/bitcoin-dot-org/bitcoin.org/pull/1752"  target="_blank" class="text-link">removing Bitpay for an unethical hard fork policy </a> which violated bitcoin.org's standards.</p>
             </div>
 
